@@ -1,35 +1,5 @@
 [egg_info]
 tag_build = dev
-tag_svn_revision = true
-
-[global]
-command_packages = buildutils.pudge_command, buildutils.publish_command
-
-[pudge]
-template_dir = docs/pudge_template
-docs = docs/index.txt docs/community/index.txt
-       docs/download/index.txt docs/integration.txt
-       docs/manual.txt docs/recipes.txt
-       docs/docs/index.txt
-doc_base = docs/
-dest = docs/html
-modules = routes
-title = Routes
-organization = Routes
-organization_url = http://routes.groovie.org/
-trac_url=http://routes.groovie.org/trac/
-blog_url = http://groovie.org/articles/category/routes
-settings = no_about=true
-           link1=/docs/ Docs
-           link2=/community/ Community
-           link3=/download/ Download
-xhtml = true
-highlighter = pygments
-
-[publish]
-doc-dir=docs/html
-doc-dest=scp://bbangert@unicron.groovie.org/usr/local/www/routes.groovie.org/htdocs/
-make-dirs=1
 
 [nosetests]
 verbose=True
@@ -37,8 +7,8 @@ verbosity=1
 detailed-errors=True
 with-doctest=True
 with-coverage=True
-#with-bitten=True
-#with-bitten-coverage=True
 cover-erase=True
+cover-html=True
+cover-html-dir=html_coverage
 #cover-tests=True
 cover-package=routes
