@@ -3,6 +3,7 @@ Routes Changelog
 
 Release 1.12 (**tip**)
 ======================
+* Added explicit way to directly use the Mapper to match with environ.
 * Fix bug with improper len placement for submapper.
 * Adding regular expression builder for entire regexp for faster rejection
   in a single regexp match should none of the routes match.
